# kohlrabii

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: fly.yml  lint-backend.yml  lint-frontend.yml  test-backend.yml  test-e2e.yml
backend/: .env.example  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  enums.py  exceptions.py  logger.py  main.py  middleware.py  models.py  seasons.py  sentry.py  supabase.py  validations.py
backend/app/auth/: api.py  deps.py  models.py
backend/app/database/: core.py  init_db.py  utils.py
backend/app/fixture_forecasts/: api.py  dixon_coles.py  fill.py  models.py
backend/app/fixtures/: api.py  fill.py  models.py  service.py
backend/app/fixtures/forecasts/: dixon_coles.py  fill.py  models.py
backend/app/ml/: metrics.py  regressor.py
backend/app/ml/features/: engineering.py  selection.py  store.py
backend/app/players/: points.py
backend/app/results/: fill.py  models.py
backend/app/seasons/: api.py  models.py
backend/app/teams/: api.py  fill.py  models.py  service.py
backend/app/teams/badges/: fill.py
backend/migrations/: env.py
backend/migrations/versions/: 0f88f81db630_remove_badge_uri_column_from_teams.py  4fc66645d3e5_add_team_relationship_to_fixtures.py  62d3f9a1dd21_split_base_team_and_season_team_tables.py  70dce147d9f9_create_fixture_forecasts.py  dbb9efe2c1f8_init_migration.py
backend/tests/: conftest.py
backend/tests/database/: test_utils.py
frontend/: .env.example  .gitignore  README.md  biome.json  components.json  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
frontend/actions/: auth.ts  fixtures.ts  seasons.ts  teams.ts
scripts/: generate-client.sh  run-dev.sh
(+167 files in other folders)
